# firstock-developer-sdk-python

./: README.md  pyproject.toml  setup.cfg
src/examples/: login_userdetails.py  option_chain.py
src/firstock/: __init__.py  exchange_socket_copy.py  firstock.py
src/firstock/Variables/: common_imports.py  enums.py
src/firstock/commonImports/: importers.py
src/firstock/loginNProfile/: loginFirstock.py  logoutFirstock.py  userDetailsFirstock.py
src/firstock/loginNProfile/loginFunctionality/: execution.py  functions.py
src/firstock/marketConnect/: brokerageCalculatorFirstock.py  expiryFirstock.py  getIndexListFirstock.py  getMultiQuoteFirstock.py  getMultiQuoteLTPFirstock.py  getOptionChainFirstock.py  getQuoteLTPFirstock.py  getQuotesFirstock.py  getSecurityInfoFirstock.py  optionChainGreeksFirstock.py  searchScripsFirstock.py  timePriceSeriesFirstock.py
src/firstock/ordersNReport/: basketMarginFirstock.py  basketOrderFirstock.py  cancelGttFirstock.py  cancelOrderFirstock.py  getGttFirstock.py  getHoldingsDetailsFirstock.py  holdingFirstock.py  limitFirstock.py  modifyAMOFirstock.py  modifyGttFirstock.py  modifyOrderFirstock.py  orderBookFirstock.py  orderMarginFirstock.py  placeAMOFirstock.py  placeGttFirstock.py  placeOrderFirstock.py  positionBookFirstock.py  productConversionFirstock.py  singleOrderHistoryFirstock.py  tradeBookFirstock.py
src/firstock/pyClient/: __init__.py  client.py
src/firstock/websockets/: __init__.py  websocket_functions.py  websockets.py
testing/: cancel_testing.py  getgtt_testing.py  modify_testing.py  testing.py
(+87 files in other folders)
