[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "firstock"
version = "1.1.0"
authors = [
    {name = "Firstock", email = "technology@thefirstock.com"},
]
description = "Firstock Developer SDK for Python"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests>=2.25.0",
    "websocket-client>=1.0.0"
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/the-firstock/firstock-developer-sdk-python"