[metadata]
name = firstock
version = 1.1.0
author = Firstock
author_email = technology@thefirstock.com
description = A Python library for interacting with the Firstock API
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
license = MIT

[options]
package_dir =
    = src
packages = find:›
python_requires = >=3.9
install_requires =
    requests>=2.25.0
    websocket-client>=1.0.0

[options.packages.find]
where = src
